--- a/paper/references.bib
+++ b/paper/references.bib
@@ -16,6 +16,17 @@
   year={2013}
 }
 
+@article{buccino2023compression,
+  title={Compression strategies for large-scale electrophysiology data},
+  author={Buccino, Alessio P and Winter, Oliver and Bryant, Dylan and Feng, Dong and Svoboda, Karel and Siegle, Josh H},
+  journal={Journal of Neural Engineering},
+  volume={20},
+  number={5},
+  pages={056009},
+  year={2023},
+  publisher={IOP Publishing}
+}
+
 @misc{zstd,
   title={Zstandard - Fast real-time compression algorithm},
   author={{Meta Platforms, Inc.}},
