--- a/paper/references.bib
+++ b/paper/references.bib
@@ -6,19 +6,21 @@
   number={6},
   pages={520--540},
   year={1987},
-  publisher={ACM}
+  publisher={ACM New York, NY, USA}
 }
 
-@article{duda2013asymmetric,
-  title={Asymmetric numeral systems: entropy coding combining speed of Huffman coding with compression rate of arithmetic coding},
-  author={Duda, Jarek},
-  journal={arXiv preprint arXiv:1311.2540},
-  year={2013}
+@inproceedings{duda2015use,
+  title={The use of asymmetric numeral systems as an accurate replacement for Huffman coding},
+  author={Duda, Jarek and Tahboub, Khalid and Gadgil, Neeraj J and Delp, Edward J},
+  booktitle={2015 Picture Coding Symposium (PCS)},
+  pages={65--69},
+  year={2015},
+  organization={IEEE}
 }
 
 @article{buccino2023compression,
   title={Compression strategies for large-scale electrophysiology data},
-  author={Buccino, Alessio P and Winter, Oliver and Bryant, Dylan and Feng, Dong and Svoboda, Karel and Siegle, Josh H},
+  author={Buccino, Alessio P and Winter, Olivier and Bryant, David and Feng, David and Svoboda, Karel and Siegle, Joshua H},
   journal={Journal of Neural Engineering},
   volume={20},
   number={5},
@@ -27,10 +29,60 @@
   publisher={IOP Publishing}
 }
 
-@misc{zstd,
-  title={Zstandard - Fast real-time compression algorithm},
-  author={{Meta Platforms, Inc.}},
-  year={2023},
-  howpublished={\url{https://github.com/facebook/zstd}},
-  note={Accessed: 2024-01-30}
+@techreport{collet2018zstandard,
+  title={Zstandard Compression and the application/zstd Media Type},
+  author={Collet, Yann and Kucherawy, Murray},
+  year={2018}
+}
+
+@article{welch1984technique,
+  title={A technique for high-performance data compression},
+  author={Welch, Terry A.},
+  journal={Computer},
+  volume={17},
+  number={06},
+  pages={8--19},
+  year={1984},
+  publisher={IEEE Computer Society}
+}
+
+@article{ziv1977universal,
+  title={A universal algorithm for sequential data compression},
+  author={Ziv, Jacob and Lempel, Abraham},
+  journal={IEEE Transactions on information theory},
+  volume={23},
+  number={3},
+  pages={337--343},
+  year={1977},
+  publisher={IEEE}
+}
+
+@article{burrows1994block,
+  title={A block-sorting lossless data compression algorithm},
+  author={Burrows, Michael},
+  journal={SRS Research Report},
+  volume={124},
+  year={1994}
+}
+
+@article{shannon1948mathematical,
+  title={A mathematical theory of communication},
+  author={Shannon, Claude Elwood},
+  journal={The Bell system technical journal},
+  volume={27},
+  number={3},
+  pages={379--423},
+  year={1948},
+  publisher={Nokia Bell Labs}
+}
+
+@article{huffman1952method,
+  title={A method for the construction of minimum-redundancy codes},
+  author={Huffman, David A},
+  journal={Proceedings of the IRE},
+  volume={40},
+  number={9},
+  pages={1098--1101},
+  year={1952},
+  publisher={IEEE}
 }
