--- a/paper/references.bib
+++ b/paper/references.bib
@@ -86,3 +86,33 @@
   year={1952},
   publisher={IEEE}
 }
+
+@misc{dandi_archive,
+  author       = {DANDI Archive},
+  title        = {Distributed Archives for Neurophysiology Data Integration (DANDI)},
+  howpublished = {\url{https://dandiarchive.org/}},
+  note         = {Accessed: 2025-01-31}
+}
+
+@article{markiewicz2021openneuro,
+  title={The OpenNeuro resource for sharing of neuroscience data},
+  author={Markiewicz, Christopher J and Gorgolewski, Krzysztof J and Feingold, Franklin and Blair, Ross and Halchenko, Yaroslav O and Miller, Eric and Hardcastle, Nell and Wexler, Joe and Esteban, Oscar and Goncavles, Mathias and others},
+  journal={Elife},
+  volume={10},
+  pages={e71774},
+  year={2021},
+  publisher={eLife Sciences Publications Limited}
+}
+
+@dataset{gorman_2023_8152964,
+  author       = {Gorman, Andrew R.},
+  title        = {Datasets associated with Uruti Basin gas hydrate
+                   heat flow feature investigated as part of Roger
+                   Revelle voyage RR1508
+                  },
+  month        = jul,
+  year         = 2023,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.8152964},
+  url          = {https://doi.org/10.5281/zenodo.8152964},
+}
