reference compression ratios

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -104,6 +104,16 @@
   publisher={eLife Sciences Publications Limited}
 }
 
+@dataset{ds005880,
+  title        = {BIDS Dataset for the Diminished Seventh Chord},
+  author       = {Wu, Chia-Ying and Chang, Yi-Pei and Lee, Yu-Ying and Tsai, Chen-Gia},
+  year         = 2024,
+  version      = {1.0.1},
+  publisher    = {OpenNeuro},
+  doi          = {10.18112/openneuro.ds005880.v1.0.1},
+  url          = {https://openneuro.org/datasets/ds005880/versions/1.0.1}
+}
+
 @dataset{gorman_2023_8152964,
   author       = {Gorman, Andrew R.},
   title        = {Datasets associated with Uruti Basin gas hydrate
